src/test/resources/api/WEB-INF/jsp/error/json/503.jsp
{
	"status":"503",
	"title":"Service Unavailable",
	"description": "The server is temporarily unable to service your request due to maintenance downtime or capacity problems. Please try again later."
}
<%@ page contentType="application/json; charset=UTF-8"%>